test/patterns/s0229_majority_element_ii/hafis/starchat/syntax_checking.txt
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:14: error: cannot find symbol
//@ requires((nums.size() <= 50000) && (nums.size() >= 1));
                  ^
  symbol:   method size()
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:14: error: cannot find symbol
//@ requires((nums.size() <= 50000) && (nums.size() >= 1));
                                            ^
  symbol:   method size()
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:15: error: cannot find symbol
//@ requires((\forall int i; 0 <= i < nums.size(); nums.get(i) <= 1000000000) && (\forall int i; 0 <= i < nums.size(); nums.get(i) >= -1000000000));
                                          ^
  symbol:   method size()
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:15: error: cannot find symbol
//@ requires((\forall int i; 0 <= i < nums.size(); nums.get(i) <= 1000000000) && (\forall int i; 0 <= i < nums.size(); nums.get(i) >= -1000000000));
                                                       ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:15: error: cannot find symbol
//@ requires((\forall int i; 0 <= i < nums.size(); nums.get(i) <= 1000000000) && (\forall int i; 0 <= i < nums.size(); nums.get(i) >= -1000000000));
                                                                                                              ^
  symbol:   method size()
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:15: error: cannot find symbol
//@ requires((\forall int i; 0 <= i < nums.size(); nums.get(i) <= 1000000000) && (\forall int i; 0 <= i < nums.size(); nums.get(i) >= -1000000000));
                                                                                                                           ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:17: error: cannot find symbol
//@ ensures((nums.get(0) == 3 && nums.get(1) == 2 && nums.get(2) == 3) ==> (\result.get(0) == 3));
                 ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:17: error: cannot find symbol
//@ ensures((nums.get(0) == 3 && nums.get(1) == 2 && nums.get(2) == 3) ==> (\result.get(0) == 3));
                                     ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:17: error: cannot find symbol
//@ ensures((nums.get(0) == 3 && nums.get(1) == 2 && nums.get(2) == 3) ==> (\result.get(0) == 3));
                                                         ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:18: error: cannot find symbol
//@ ensures((nums.get(0) == 1 && nums.get(1) == 2) ==> (\result.get(0) == 1 && \result.get(1) == 2));
                 ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:18: error: cannot find symbol
//@ ensures((nums.get(0) == 1 && nums.get(1) == 2) ==> (\result.get(0) == 1 && \result.get(1) == 2));
                                     ^
  symbol:   method get(int)
  location: variable nums of type int[]
./test/s0229_majority_element_ii/hafis/starchat/build/Solution.java:19: error: cannot find symbol
//@ ensures((nums.get(0) == 1) ==> (\result.get(0) == 1));
                 ^
  symbol:   method get(int)
  location: variable nums of type int[]
12 errors
